# MyDevDashboard

./: .env.example  .env.sandbox  .gitignore  AGENTS.md  Cargo.toml  README.md  dev-dash  docker-compose.sandbox.yml  docker-compose.yml
.claude/: settings.json
migrations/: 0001_init.sql  0002_ticket_parent.sql
screenshots/: README.md
scripts/: _common.sh  db-down.sh  db-psql.sh  db-reset.sh  db-up.sh  sandbox-db.sh
src/: config.rs  error.rs  logging.rs  main.rs
src/app/: bridge.rs  event.rs  mod.rs  state.rs  worker.rs
src/app/notes/: mod.rs
src/app/profile/: mod.rs
src/app/projects/: mod.rs  project.rs  worktree.rs
src/app/tasks/: mod.rs  note.rs  stage.rs  ticket.rs
src/app/todos/: mod.rs
src/domain/: mod.rs
src/domain/notes/: mod.rs
src/domain/profile/: mod.rs
src/domain/projects/: mod.rs  project.rs  worktree.rs
src/domain/tasks/: mod.rs  note.rs  stage.rs  ticket.rs
src/domain/todos/: mod.rs
src/system/: db.rs  mod.rs
src/system/notes/: mod.rs
src/system/profile/: mod.rs
src/system/projects/: git.rs  mod.rs  project.rs  worktree.rs
src/ui/: dev.rs  mod.rs  theme.rs
src/ui/home/: mod.rs
static/docker/: docker-compose.yml
static/migrations/: 0003_uncategorized_notes.sql  0004_profile_containment.sql  0005_stage_terminal.sql  0006_projects.sql  0007_todos.sql  0008_project_setup_script.sql  0009_profile_last_view.sql  0010_project_teardown_script.sql
static/screenshots/: README.md
static/scripts/: _common.sh  bundle-macos.sh  db-down.sh  db-psql.sh  db-reset.sh  db-up.sh  icon-gen.sh  sandbox-db.sh  window-id.swift
(+25 files in other folders)
